<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hlc.examenu1hlc.Saludame">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/saludaTV" />

    <EditText
        android:id="@+id/nombreET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="@string/saludaET" />

    <Button
        android:id="@+id/aceptarBT"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:text="@string/txtBtAceptar"
        android:onClick="aceptar"/>

    <TextView
        android:id="@+id/tvRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
