<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hlc.examenu1hlc.MainActivity"
    android:weightSum="1">

    <!--Boton que abre una nueva activity para hacer un juego de saludos-->
    <Button
        android:id="@+id/btSaluda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/saludame"
        android:onClick="saludame" />

    <!--Boton que abre la aplicacion de google maps a una ubicacion concreta-->
    <Button
        android:id="@+id/btDndStudias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/dndStudias"
        android:onClick="dondeStudias"/>

    <!--Boton que abre la aplicacion de youtube-->
    <Button
        android:id="@+id/btVidFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/vidFav"
        android:onClick="videoFav" />
</LinearLayout>
